# tennis-booker

./: .dockerignore  .env-example  .gitignore  .gitleaks.toml  Dockerfile.notification  Dockerfile.railway  Dockerfile.scraper  Makefile  README.md  docker-compose.prod.yml  docker-compose.vault-integrated.yml  docker-compose.yml  env.prod.example  go.mod  go.sum  package-lock.json  package.json  prd.md  production-prd.md  railway.json  requirements.txt  tennis-system  vault.md
.github/: README.md
.github/workflows/: cd.yml  ci.yml  docker-build.yml
.taskmaster/: config.json  deploy-prd.md  state.json
.taskmaster/docs/: prd.txt  production-deployment-prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
apps/backend/: .gitignore  Dockerfile  Dockerfile.notification  Dockerfile.retention  Dockerfile.server  Makefile  README.md  SECURITY_NOTES.md  env.example  go.mod  go.sum
apps/frontend/: Dockerfile  README.md  (+13 more)
apps/scraper/: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  test_config_e2e.py
apps/scraper/src/: __init__.py  __main__.py  main.py  playwright_scraper.py  redis_publisher.py  scheduler.py
apps/scraper/src/config/: __init__.py  config.py
apps/scraper/src/deduplication/: __init__.py  redis_deduplicator.py
apps/scraper/src/scrapers/: __init__.py  clubspark_scraper.py  courtside_scraper.py  scraper_orchestrator.py
apps/scraper/tests/: test_base_scraper.py  test_config.py  test_redis_deduplicator.py  test_scraper_orchestrator.py
config/: default.json  development.json  production.json  test.json
docs/: CONFIGURATION_GUIDE.md  DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md  current_setup.md
scripts/: ci-checks.sh  cleanup.sh  deploy-cloud.sh  deploy-to-production.sh  dev.sh  fresh_start.sh  get-oci-secrets.sh  prod.sh  push_slots_to_redis.go  run_local.sh  run_tennis_system.sh  seed_venues.sh  setup-deployment.sh  test-integration.sh
src/: check_stratford_pricing.py  redis_publisher.py
tests/: test_api_endpoints.py  test_notification_system.py  test_seed_venues.py
utils/: README.md  seed_venues.py
(+252 files in other folders)
